service-mesh/istioinaction/authorization-policy.yaml
apiVersion: "security.istio.io/v1beta1"
kind: "AuthorizationPolicy"
metadata:
  name: "allow-catalog-requests-in-web-app"
  namespace: istioinaction
spec:
  selector:
    matchLabels:
       app: webapp
  rules:
  - to:
    - operation:
        paths: ["/headers"]
  action: ALLOW
